# vest

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: refs_120.fa  refs_120.mus  refs_24.fa  refs_24.mus
scripts/: diversityRun.py  hisatAlign.sh  mus2snp.py  pipeline.sh  recombinantRun.py  run.sh  runExample.sh  subtypeRun.py
src/: FastaTools.cpp  FastaTools.h  MGraph.cpp  MGraph.h  MSA.cpp  MSA.h  MSA_Edge.h  MSA_Graph.cpp  MSA_Graph.h  MSA_Index.h  MSA_List.cpp  MSA_List.h  MSA_Vertex.h  arg_parse.cpp  arg_parse.h
